feat: add online user management and enhance documentation
- Add online user management module (list, force logout)
- Add department tree component for user management
- Update README with bilingual support (English/Chinese)
- Add project badges and star history chart
- Enhance user management with department association